Bug 1192655 - Make menubar not react to events when it is not visible. r=enn

--HG--
extra : source : 91aae6b3814b973be71cf460efd6246b68048ff4